# adydrag

./: README.md  main.py  pyproject.toml  rag adyd.ipynb  rag hibrido.ipynb  rag_mongodb.ipynb
openapi/: openapi.yaml
src/application/service/: IAService.py  ResponseFromRagServiceImpl.py
src/application/service/session/: ChatHistoryRepositoryService.py
src/domain/model/: HechizoMetadata.py  MultipleDocument.py
src/domain/service/: ResponseFromRagService.py
src/infrastructure/adapters/azure/: IAServiceImpl.py
src/infrastructure/adapters/mongo/: MongoService.py  MongoServiceImpl.py  TTLMongoDBChatHistory.py
src/infrastructure/adapters/ollama/: OllamaService.py  OllamaServiceImpl.py
src/infrastructure/adapters/rest/: TeamsAdapter.py  teams_adapter.py
src/infrastructure/adapters/session/: ChatHistoryMongoRepositoryServiceImpl.py  ChatHistoryRepositoryPortImpl.py
src/infrastructure/config/: Settings.py
src/infrastructure/di/: DependencyModule.py
